<resources>
    <string name="app_name">Forex Quiz</string>
    <string name="appName">Forex Quiz</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doubleTapToExit">To exit, tap again</string>
    <string name="lockedItems">Locked, upgrade the App</string>
    <string name="rightAnswer"> Right answer </string>
    <string name="wrongAnswer"> Wrong answer </string>
    <string name="withoutAnswer"> No answer </string>
    <string name="percent"> Percent </string>
    <string name="passText">Well done, keep up the good job</string>
    <string name="failText">You need more practice</string>
    <string name="Chapter1">Section 1</string>
    <string name="Chapter1Pages">INTRODUCTION</string>
    <string name="secondChapter">Section 2</string>
    <string name="secondChapterPages"> UNDERSTANDING THE FOREX MARKET</string>
    <string name="thirdChapter">Section 3</string>
    <string name="thirdChapterPages">TECHNICAL ANALYSIS AND Patterns</string>
    <string name="forthChapter">Section 4</string>
    <string name="forthChapterStrings">FUNDAMENTAL ANALYSIS</string>
    <string name="fifthChapter">Section 5</string>
    <string name="fifthChapterPages">SMART MONEY</string>
    <string name="sixChapter">Section 6</string>
    <string name="sixChapterPages">MARKET CYCLE</string>
    <string name="telegramLink">tg://resolve?domain=Novin_Support</string>
    <string name="whatsAppLink">https://wa.me/message/XTIMH3OVLRGKA1</string>
    <string name="premiumIsActive">Premium is active</string>
    <string name="comingSoon">Coming soon</string>
    <string name="endOfTest">Finish</string>
    <string name="Exit">Exit</string>
    <string name="reviewAnswers">Review</string>
    <string name="again">Again</string>
    <string name="builtBy">Built with</string>
    <string name="rule3">3 - this is an openSource application and you can find the source in github</string>
    <string name="rule2">2 - Non of your data is being collected by the app</string>
    <string name="rule1">1 - There is no need to internet connection, app is fully offline.</string>
    <string name="rules">Rules :</string>
    <string name="email">JosephKhoshrang@gmail.com</string>
    <string name="support">Support :</string>
    <string name="buyTxt">Upgrade, for free!</string>
    <string name="onTimePurchase">One time</string>
    <string name="upgrade">Upgrade</string>
    <string name="fragmentBookLabel">Education</string>
    <string name="fragmentSettingsLabel">Settings</string>
    <string name="fragmentResultLabel">Results</string>
    <string name="fragmentTestLabel">Quiz</string>
    <string name="exitTestToResult">Finish the test and see the results?</string>
    <string name="exitTest">Finish the review and go back to home?</string>
    <string name="attention">Attention</string>
    <string name="yes">Yes</string>
    <string name="no">Not now</string>
    <string name="QindexA"> A. </string>
    <string name="QindexB"> B. </string>
    <string name="QindexC"> C. </string>
    <string name="QindexD"> D. </string>
    <string name="testMainName"> Quiz </string>
    <string name="bottom_nav_quiz">Quiz</string>
    <string name="bottom_nav_education">Education</string>
    <string name="bottom_nav_settings">Settings</string>
</resources>