<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/upgrade"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:visibility="gone"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="18dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:elevation="3dp"
                android:padding="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="8dp"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <TextView
                        android:id="@+id/yektxt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:text="@string/onTimePurchase"
                        android:textColor="@color/teal_700"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/buy"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:layout_margin="8dp"
                            android:drawableLeft="@drawable/ic_shopping"
                            app:drawableTint="@color/white"
                            android:padding="3dp"
                            android:text="@string/buyTxt"
                            android:drawablePadding="2dp"
                            android:paddingLeft="3dp"
                            android:visibility="visible" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/malek_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/teal_700" />

                    <ProgressBar
                        android:id="@+id/progressbar_buy"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="-1dp"
                        android:indeterminate="true"
                        android:max="100"
                        android:visibility="gone" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:elevation="3dp"
                android:padding="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/gray"
                >

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/support"


                        />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/imageViewWhatsapp"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:src="@drawable/whatsapp" />


                        <ImageView
                            android:id="@+id/imageViewTelegram"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="20dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:src="@drawable/telegram" />

                        <ImageView
                            android:id="@+id/imageViewrating"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:src="@drawable/review"
                            android:visibility="gone" />


                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:elevation="3dp"
                android:padding="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rules"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/rule1"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:text="@string/rule2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"

                        android:text="@string/rule3" />



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_transplant" />

            <TextView
                android:id="@+id/versiontxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"

                android:text="@string/appName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/builtBy" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center|bottom"
                    android:scaleType="fitCenter"
                    android:src="@drawable/heart" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>

